--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	</style>
 </head>
 <body>
-	<h1>Image gallery</h1>
+	<h1>Image Gallery</h1>
 	<div class="image-gallery">
 		<img src="./assets/pluto.jpeg" alt="Pluto">
 		<img src="./assets/1878_map_of_Toronto.jpeg" alt="1878 map of Toronto" />
